<resources>
    <string name="app_name">ESG CAP - Human Resources</string>
    <string name="support_link">http://support.bequarks.cl/Api/support.php</string>

    <string name="disneyServer">https://esgcap.humanresources.cl</string>

    //login
    <string name="email">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="invalid_email">Email inválido</string>
    <string name="empty">Vacío</string>
    <string name="sign_in_btn">Iniciar</string>
    <string name="forget_pass_txt">Olvidaste tu contraseña?</string>
    <string name="send_pass_btn">Enviar contraseña</string>
    <string name="title_dialog_reply_ticket">Informe su Problema</string>
    <string name="hint_dialog_reply_ticket">Ingrese Contenido</string>
    <string name="btn_cancel_dialog_reply_ticket">Cancelar</string>
    <string name="btn_reply_dialog_reply_ticket">Aceptar</string>
    //forgetPassword
    <string name="passwordSentToYourMail">"Una nueva contraseña fue enviada a su correo electrónico"</string>
    <string name="tryLater">p8or favor intente mas tarde</string>
    <string name="emailNotFound">El correo electrónico no encontrado</string>
    <string name="ticket_empty">No hay tickets disponibles</string>
    <string name="cnn_time_out_msg">ocurrió un error por favor intente de nuevo más tarde</string>
    //drawer
    <string name="setting">Ajustes de perfil</string>
    <string name="about">Acerca de</string>
    <string name="update">Actualizar datos</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="check_list">Checklist</string>
    //alert log out
    <string name="msg">Estás seguro de que quieres cerrar la sesión?</string>
    <string name="log_out_yes">Si</string>
    <string name="log_out_no">No</string>
    <string name="errorHandlingMessage">Ocurrió un error</string>
    <string name="Shops">Tiendas</string>

    // suport
    <string name="responseErroreBodyFalse">el cuerpo del error de respuesta es falso</string>
    <string name="fail">fallar</string>
    <string name="josnNotArticles">json no tiene artículos</string>
    <string name="notConvertToJson">no puedo convertir a json</string>
    <string name="notLoad">no se puede cargar</string>
    <string name="statusFalse">el código de estado es falso</string>
    <string name="errorAcured">ocurrió un error</string>
    <string name="thingHappend">algo ha pasado!</string>

    //////////////////==================
    <string name="fragment_shop_title">Tiendas</string>
    <string name="main_prgrss_title">Obteniendo datos ...</string>
    <string name="main_prgrss_msg">Por favor espera...</string>
    <string name="fragment_name_finish">Terminar</string>
    <string name="fragment_check_lists_title">Check lists</string>
    ////======================================================================////
    <string name="check_list_back_btn">Atras</string>
    <string name="cehck_list_done_btn">Siguiente</string>

    //login
    <!-- TODO: Remove or change this placeholder text -->
    //////==================================================================================////////
    <string name="about_text">Aplicación Creada para el levantamiento en terreno de stock y orden de productos.</string>

    <string name="setting_btn">Salvar</string>

    <string name="fragment_check_list_title">Respuestas</string>

    <string name="uploading_pic">Subiendo imagen ...</string>
    <string name="short_pass">La contraseña es demasiado corta</string>

    <string name="password_not_match_msg">Las contraseñas no coinciden</string>
    <string name="pass_changed_msg">Contraseña cambiada con éxito</string>
    <string name="turn_gps_on_msg">Enciende tu GPS</string>
    <string name="no_shops_around">No hay una tienda asignada</string>

    <string name="send_ticket">Informe de problema</string>
    <string name="support">Soporte</string>
    <string name="send_txt">Enviar</string>
    <string name="subject">Asunto</string>
    <string name="Content">Explicación</string>

    <string name="ticket_subject_hint">Ingrese su asunto</string>
    <string name="ticket_content_hint">Ingrese su Explicación</string>
    <string name="ticket_subject_error">Por favor ingrese tema</string>
    <string name="ticket_content_error">Por favor ingrese el contenido</string>

    <string name="common_issues">Problemas Comunes</string>
    <string name="my_issues">Problemas Reportados</string>
    <string name="ticket_send_msg">Su problema enviado con éxito</string>

    <string name="shops_direction_msg">¿Quieres establecer la dirección en esta tienda?</string>

    <string name="pressAgainToExitMsg">Por favor, haga clic en ATRÁS nuevamente para salir</string>
    <string name="messageVersionApp">La nueva versión de la aplicación está disponible, Nuevas características agregadas y correcciones de errores. ¿Desea actualizar su aplicación?</string>
    <!-- TODO: Remove or change this placeholder text -->

    // ---------------------------------------------------------------------


    <string name="last24haours">Últimas 24 horas</string>
    <string name="check_list_filter_pre_text">Mostrar </string>
    <string name="filter">Filtrar</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Eliminar</string>
    <string name="no">No</string>
    <string name="remove_row_msg">¿Está seguro de que desea eliminar los datos de esta lista de verificación?</string>


    <string name="notif_message">Su Check Lists ha sido guardado como borrador</string>
    <string name="notif_title">Borrador guardado</string>
    <string name="no_network">SIN ANTENA</string>

    <string name="no_checklist">La lista de verificación no está disponible</string>

    <string name="fab_menu_item_a">Auditoría</string>
    <string name="fab_menu_item_c">Campañas</string>

    <string name="crashMessage">¿Quieres reportar este problema?</string>
    <string name="surveyIdIsZero">La identificación de la encuesta no debe ser cero</string>
    <string name="shopIdIsZero">La identificación de la tienda no debe ser cero</string>
    <string name="surveyIdIsNull">La identificación de la encuesta no debe estar vacía</string>
    <string name="shopIdIsNull">la identificación de la tienda no debe estar vacía</string>
    <string name="emptyData">No se puede enviar respuesta vacía!</string>
    <string name="preDistanceMsg">La distancia a esta tienda es de</string>
    <string name="postDistanceMsg">kilómetro</string>
    <string name="postDistanceMsgPlural">kilómetros</string>
    <string name="wayFarFromShop">No estás en la tienda</string>
    <string name="meterMsg">metros</string>
    <string name="and">y</string>
    <string name="youAreInTheShop">Pareces estar en la tienda</string>
    <string name="serverREsponseError">Error de respuesta del servidor</string>
    <string name="authFailedMsg">Su sesión ha expirado, por favor vuelva a iniciar sesión</string>
    <string name="deleted">Eliminado</string>
    <string name="deletedItems">Objetos eliminados</string>
    <string name="removeAll">Eliminar todo</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps">Mapas</string>
    <string name="deleteAllTitle">Eliminar todos</string>
    <string name="deleteAllMsg">¿Estás seguro de que quieres eliminar todos los elementos?</string>
    <string name="permissionErrorGPS">Necesitamos permiso de GPS para encontrar tiendas cercanas.</string>
    <string name="noShopFindUpToNow">¿No encuentras tiendas hasta ahora quieres terminar de buscar?</string>
    <string name="finish">terminar</string>
    <string name="noShop">No hay tienda</string>
    <string name="noShopUpdateDataMsg">¿No hay tienda asignada desea actualizar los datos?</string>
    <string name="locationPermissionError">La aplicación necesita permiso de ubicación para mostrar la distancia</string>
    <string name="GPSnotWorkTurnOnHightPerformance">El GPS no funciona bien. Por favor verifique el rendimiento de su GPS.</string>
    <string name="fillAllBlanks">Por favor llene todos los espacios en blanco</string>
    <string name="valueCannotZero">El valor no puede ser cero</string>
    <string name="yearNotExist">Este año no existe</string>
    <string name="valueNotValid">El valor no es válido</string>
    <string name="pleaseUpdateAfterUpload">Algunos elementos se están sincronizando. Intenta actualizarlos después de que todos hayan terminado.</string>
    <string name="imageNoExist">Las imágenes de este resultado se eliminan.</string>
    <string name="noConnectio">Revisa tu conexión a Internet. Apareces conectado, pero sin internet</string>
    <string name="errorFixMsg">Contacte a su administrador para que corrija la configuración en el Check List, para que pueda trabajar correctamente.</string>
    <string name="checklistErrorWarn">Estos son los problemas de configuración para informar a su administrador:</string>
    <string name="tutorial">Tutorial</string>
    <string name="appTutorial">App Tutorial</string>
    <string name="checklistTutorial">Checklist Tutorial</string>
    <string name="Tutorials">Tutorials</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="cameraTutorial">Camera Tutorial</string>
    <string name="databaseVersionError">Se produjo un error inesperado con la base de datos, póngase en contacto con el soporte</string>
    <string name="login">Iniciar sesión</string>
    <string name="direction">Dirección</string>
    <string name="country">País</string>
    <string name="city">Ciudad o Comuna</string>
    <string name="zone">Zona Geográfica</string>
    <string name="allItems">Todos los resultados</string>
    <string name="closeApp">Cerrar app</string>
    <string name="databaseVersionErrorIncrease">La versión de la base de datos aumenta y hará que pierda datos antiguos</string>

</resources>
