<?xml version="1.0" encoding="utf-8"?><LinearLayout    android:padding="16dp"    android:background="@color/main_drawer_back"    android:orientation="vertical"    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"    android:layout_height="match_parent">    <TextView        android:padding="8dp"        android:typeface="normal"        android:textSize="18sp"        android:textColor="@color/main_empty"        android:text="@string/remove_row_msg"        android:textAlignment="center"        android:layout_width="match_parent"        android:layout_height="wrap_content" />    <LinearLayout        android:layout_marginTop="16dp"        android:layout_width="match_parent"        android:layout_height="wrap_content">        <TextView            android:background="@drawable/calendar_alert_btn_back"            android:textAlignment="center"            android:textSize="16sp"            android:textColor="@color/main_empty"            android:id="@+id/no"            android:text="@string/no"            android:layout_weight="1"            android:layout_width="0dp"            android:layout_height="wrap_content" />        <TextView            android:background="@drawable/calendar_alert_btn_back"            android:textAlignment="center"            android:textSize="17sp"            android:textColor="#fa1111"            android:id="@+id/delete"            android:text="@string/delete"            android:layout_weight="1"            android:layout_width="0dp"            android:layout_height="wrap_content" />    </LinearLayout></LinearLayout>