<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:gravity="center_vertical"
        android:scaleY="1.04">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="12dp"
            android:padding="4dp"
            android:src="@drawable/back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="36dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_ticket"
                android:textColor="#fff"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="#fff"
                android:elevation="4dp"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_margin="16dp"
                    android:orientation="vertical">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_alignParentTop="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/nouser"
                        app:civ_border_color="#363636"
                        app:civ_border_width="2dp"
                        app:civ_shadow="true"
                        app:civ_shadow_color="#8BC34A"
                        app:civ_shadow_radius="10" />


                    <LinearLayout
                        android:id="@+id/name_linear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_toRightOf="@+id/imgProfile"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="24dp"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:textSize="17sp"
                            tools:text="amirreza" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/name_linear"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_toRightOf="@+id/imgProfile"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="24dp"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:textSize="17sp"
                            tools:text="amirreza" />
                    </LinearLayout>


                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:background="#fff"
                android:elevation="4dp"
                app:cardCornerRadius="4dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/subject"
                        android:textColor="#3b3b3b" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/ticket_edt"
                        android:hint="@string/ticket_subject_hint"
                        android:padding="6dp"
                        android:textColor="#000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/Content"
                        android:textColor="#3b3b3b" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_content"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/ticket_edt"
                        android:gravity="top"
                        android:hint="@string/ticket_content_hint"
                        android:padding="4dp"
                        android:textColor="#000" />

                    <Button
                        android:id="@+id/btn_send"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginBottom="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/back_btn"
                        android:text="@string/send_txt"
                        android:textColor="#fff" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>