<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="42dp"

        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView

            android:id="@+id/back"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="4dp"
            android:padding="10dp"
            android:src="@drawable/back" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleted"
            android:textColor="#fff"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/topHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/deletedCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/main_empty"
            tools:text="345" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/deletedItems"
            android:textColor="@color/main_empty"
            />

        <LinearLayout
            android:gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textSize="12dp"
                android:id="@+id/removeAll"
                android:textColor="@color/main_back"
                android:layout_below="@+id/search_linear"
                android:layout_alignParentRight="true"
                android:background="@drawable/calendar_btn_back"
                android:text="@string/removeAll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/emptybox"
        android:layout_width="180dp"
        android:layout_height="170dp"
        android:adjustViewBounds="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="148dp"
        >


        <ImageView
            android:tint="@color/main_empty"
            android:src="@drawable/openemptybox"
            android:layout_centerInParent="true"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />
        <TextView
            android:textAlignment="center"
            android:textColor="@color/main_empty"
            android:text="No Encontramos para tu usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@id/topHolder"
        android:visibility="invisible"
        android:id="@+id/recycler"
        tools:listitem="@layout/layout_deleted_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        >

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>