<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ActivityTutorial.ActivityTutorial">

    <ScrollView
        android:id="@+id/toolsScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:padding="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="#000"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/Tutorials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <android.support.v7.widget.CardView
            android:id="@+id/appT"
            android:elevation="3dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="4dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/appicon"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>

                <LinearLayout
                    android:layout_margin="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="1dp">

                </LinearLayout>

                <TextView
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:textColor="#383838"
                    android:textSize="17sp"
                    android:textAlignment="center"
                    android:text="@string/appTutorial"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:elevation="3dp"
            android:id="@+id/checklistT"
            android:layout_marginTop="2dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="4dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/checklist"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>

                <LinearLayout
                    android:layout_margin="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="1dp">

                </LinearLayout>

                <TextView
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:textColor="#383838"
                    android:textSize="17sp"
                    android:textAlignment="center"
                    android:text="@string/checklistTutorial"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        </LinearLayout>



        <LinearLayout
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.v7.widget.CardView
                android:id="@+id/cameraT"
                android:elevation="3dp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="2dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:padding="4dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_camera_alt_black_24dp"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"/>

                    <LinearLayout
                        android:layout_margin="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="1dp">

                    </LinearLayout>

                    <TextView
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"
                        android:textColor="#383838"
                        android:textSize="17sp"
                        android:textAlignment="center"
                        android:text="@string/cameraTutorial"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/checklistE"
                android:elevation="3dp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:padding="4dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_quiz"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"/>

                    <LinearLayout
                        android:layout_margin="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="1dp">

                    </LinearLayout>

                    <TextView
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"
                        android:textColor="#383838"
                        android:textSize="17sp"
                        android:textAlignment="center"
                        android:text="@string/checklistTutorial"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>

    </ScrollView>


    <FrameLayout
        android:id="@+id/frame"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</android.support.constraint.ConstraintLayout>